syntax = "proto3";

package products;

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.products";

message DeleteProductRequest {
  string product_id = 1;
}
