syntax = "proto3";

package products;

import "common/pagination.proto";
import "google/protobuf/timestamp.proto";
import "services/products/products/response/product.response.proto";

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.products";

message GetProductsOfShopResponse {
  repeated ProductResponse products = 1;
  int32 count = 2;
}
